--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,5 @@
-# MongoDB Atlas Connection URI (free tier)
-MONGODB_URI=mongodb+srv://username:password@cluster0.abcde.mongodb.net/umbrella-stock?retryWrites=true&w=majority
+# MongoDB Atlas Connection
+MONGODB_URI=mongodb+srv://root:12345678901@cluster0.mihlqek.mongodb.net/umbrella-stock?retryWrites=true&w=majority
 
 # Alpha Vantage API Key (free tier - 5 API requests per minute)
 ALPHA_VANTAGE_API_KEY=your_alpha_vantage_api_key_here
