--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "lightweight-charts": "^5.0.8",
     "lucide-react": "^0.542.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
