--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "sync-mutual-funds": "node scripts/sync-mutual-funds.js"
+    "sync-mutual-funds": "node scripts/sync-mutual-funds.js",
+    "sync-mf-daily": "node scripts/sync-amfi-daily.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
@@ -24,10 +25,14 @@
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "highcharts": "^12.4.0",
+    "highcharts-react-official": "^3.2.2",
     "lightweight-charts": "^5.0.8",
     "lucide-react": "^0.542.0",
     "mongodb": "^5.6.0",
