--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^4.29.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,6 +36,7 @@
     "eslint-config-next": "13.4.5",
     "highcharts": "^12.4.0",
     "highcharts-react-official": "^3.2.2",
+    "jsonwebtoken": "^9.0.2",
     "lightweight-charts": "^5.0.8",
     "lucide-react": "^0.542.0",
     "mongodb": "^5.6.0",
