--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^4.29.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -35,6 +36,7 @@
     "dotenv": "^17.2.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "formidable": "^3.5.4",
     "highcharts": "^12.4.0",
     "highcharts-react-official": "^3.2.2",
     "jsonwebtoken": "^9.0.2",
@@ -51,7 +53,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97"
