--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
@@ -54,6 +55,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
     "recharts": "^2.7.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.3.2",
