--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type-check": "tsc --noEmit",
     "sync-mutual-funds": "node scripts/sync-mutual-funds.js",
     "sync-mf-daily": "node scripts/sync-amfi-daily.js",
+    "sync-activities": "node scripts/sync-stock-activities.js",
+    "sync-activities-test": "node scripts/sync-test-stocks.js",
+    "check-news-stats": "node scripts/check-news-stats.js",
     "postinstall": "node scripts/postinstall.js"
   },
   "dependencies": {
@@ -53,6 +56,7 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
     "next": "^13.4.5",
+    "node-cron": "^4.2.1",
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
